# robot_env_evaluator

./: .gitignore  CMakeLists.txt  README.md  package.xml
.github/workflows/: doxygen-gh-pages.yml
docs/: Doxyfile
example/: robot_env_evaluator_example.cpp
franka_o80-master/: .gitignore  CMakeLists.txt  Doxyfile  README.md
franka_o80-master/example/: backend.cpp  control.cpp  control.py  selftest.cpp  trajectory
franka_o80-master/include/franka_o80/: actuator.hpp  driver.hpp  driver_input.hpp  driver_input_output.hpp  driver_output.hpp  error.hpp  front_end.hpp  gripper_mode.hpp  kinematics.hpp  limits.hpp  queue.hpp  robot_mode.hpp  standalone.hpp  state.hpp  states.hpp  version.hpp
franka_o80-master/model/: .setup_assistant  CMakeLists.txt  franka.launch  franka.urdf  package.xml
franka_o80-master/model/config/: fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  panda.srdf  ros_controllers.yaml
franka_o80-master/model/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  panda_moveit_controller_manager.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
franka_o80-master/src/: driver.cpp  driver_input.cpp  driver_input_output.cpp  driver_output.cpp  kinematics.cpp  standalone.cpp  state.cpp  states.cpp  wrappers.cpp
include/robot_env_evaluator/: robot_env_evaluator.hpp  robot_env_evaluator_path.h.in  robot_presets.hpp  state_source_bridge.hpp
launch/: debug.launch
robots/panda_description/srdf/: panda-alternative.srdf
robots/panda_description/urdf/: panda.urdf
scripts/: pinocchio_prototype.ipynb
scripts/utils/: __init__.py  visualizer.py
src/: collision_detection.cpp  robot_env_evaluator.cpp  robot_presets.cpp  state_source_bridge.cpp
test/: test_robot_env_evaluator.cpp
